helmfile/websocket/manifest-ingress-v1.4.0.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: <YOUR_NAMESPACE>
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              servicePort: 3000
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          # Below is the important part!
          - path: /ws/
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 40510
